separated pages for buttons and drag_and_drop

--- a/src/Components/Buttons.css
+++ b/src/Components/Buttons.css
@@ -1,3 +1,8 @@
+/* GENERAL STYLES TO SEPARATE THE BUTTONS. NOT FOR PRODUCTION */
+button {
+    margin: 16px;
+  }
+
 /*-------------------------------------------------------------------------------------------------------------------------------------*/
 /* VITE */
 #vite {
